--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="viewport" content="user-scalable=no"/>
+		<!-- <meta name="viewport" content="user-scalable=no"/> -->
 		<meta name="apple-mobile-web-app-capable" content="yes"/> 
+  		<meta name="full-screen" content="yes"/>
 		<script src="./assets/js/script.js"></script>
 	</head>
 	<body>
