--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
 		<!-- <meta name="viewport" content="user-scalable=no"/> -->
 		<meta name="apple-mobile-web-app-capable" content="yes"/> 
-  		<meta name="full-screen" content="yes"/>
+  		<!-- <meta name="full-screen" content="yes"/> -->
 		<script src="./assets/js/script.js"></script>
 	</head>
 	<body>
