--- a/index.html
+++ b/index.html
@@ -18,46 +18,50 @@
         <header class="header">
             <nav>
                 <div class="navLeft">
-                    <a href="#">Yash Djson Dookun</a>
+                    <a href="/">Yash Djson Dookun</a>
                 </div>
                 <div class="navRight">
                     <div>
-                        <a href="#">Home</a>
+                        <a href="/">Home</a>
                     </div>
                     <div>
-                        <a href="#">LINK</a>
+                        <div class="projects" onclick="toggleDropDown()">Projects</div>
+                        <div id="dropdown" class="dropdown-content">
+                            <a href="./animations.html">Animations</a>
+
+                        </div>
                     </div>
                     <div>
-                        <a href="#">LINK</a>
+                        <a href="#">Contact Me</a>
                     </div>
                     <div class="burger">
-                        <img src="./assets/images/navbar/menu_24px.png" alt="">
+                        <img src=" ./assets/images/navbar/menu_24px.png " alt=" ">
                     </div>
                 </div>
             </nav>
         </header>
-        <article class="article-one">
-            <section class="section-Top">
-                <div class="titleText">
+        <article class="article-one ">
+            <section class="section-Top ">
+                <div class="titleText ">
                     <h1>Djson's Digital Portfolio</h1>
                 </div>
-                <div class="separator-line"></div>
-                <div class="welcome">
-                    <div class="welcomeMsg">
+                <div class="separator-line "></div>
+                <div class="welcome ">
+                    <div class="welcomeMsg ">
                         <h2>Hey y'all, Welcome to my Digital Portfolio! Do come along and let's enjoy my journey throughout my second year at the University of Mauritius together!</h2>
                     </div>
-                    <div class="followAlong">
-                        <button class="followAlong-btn">Follow Along</button>
+                    <div class="followAlong ">
+                        <button class="followAlong-btn ">Follow Along</button>
                     </div>
                 </div>
             </section>
-            <section class="section-One">
-                <div class="aboutMe">
-                    <div class="whoAmI">
-                        <div class="myImage">
-                            <img src="./assets/images/userFace/check_male_50px.png" alt="">
+            <section class="section-One ">
+                <div class="aboutMe ">
+                    <div class="whoAmI ">
+                        <div class="myImage ">
+                            <img src="./assets/images/userFace/check_male_50px.png " alt=" ">
                         </div>
-                        <div class="myDescription">
+                        <div class="myDescription ">
                             <br>
                             <p>
                                 Hello folks, my name is Yash Djson Dookun.
@@ -74,8 +78,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="aboutMyCourse">
-                    <div class="description1">
+                <div class="aboutMyCourse ">
+                    <div class="description1 ">
                         <h2>
                             BSC(Hons.) Web & Multimedia Development
                             <hr>
@@ -90,7 +94,7 @@
                             those intending to follow a technical, managerial or organizational role within the field of Information Systems.
                         </p>
                     </div>
-                    <div class="description2">
+                    <div class="description2 ">
                         <h2>
                             Since I am currently a 2nd Year Student, my main modules for this year are:
                         </h2>
@@ -115,11 +119,40 @@
                 </div>
             </section>
         </article>
-        <footer>
-        </footer>
     </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <footer>
+        <section class="contactMe ">
+            <ul>
+                <li>
+                    <a href="# "><img src="./assets/images/Footer/twitter_127px.png " alt=" "></a>
+                </li>
+                <li>
+                    <a href="# "><img src="./assets/images/Footer/facebook_127px.png " alt=" "></a>
+                </li>
+                <li>
+                    <a href="# "><img src="./assets/images/Footer/instagram_127px.png " alt=" "></a>
+                </li>
+                <li>
+                    <a href="# "><img src="./assets/images/Footer/email_127px.png " alt=" "></a>
+                </li>
+                <li>
+                    <a href="# "><img src="./assets/images/Footer/github_127px.png " alt=" "></a>
+                </li>
+                <li>
+                    <a href="# "><img src="./assets/images/Footer/skype_127px.png " alt=" "></a>
+                </li>
+            </ul>
+        </section>
+        <div class="txt ">
+            <p>©All Rights Reserved</p>
+            <p>|</p>
+            <p>Designed & Developed By: Yash Djson Dookun</p>
+            <p>|</p>
+            <p>2019</p>
+        </div>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js "></script>
 </body>
 
-</html>
+</html
