--- a/animations.html
+++ b/animations.html
@@ -19,7 +19,7 @@
         <header class="header">
             <nav>
                 <div class="navLeft">
-                    <a href=".././index.html">Yash Djson Dookun</a>
+                    <a href="DigitalPortfolio/index.html">Yash Djson Dookun</a>
                 </div>
                 <div class="navRight">
                     <div>
