--- a/animations.html
+++ b/animations.html
@@ -19,11 +19,11 @@
         <header class="header">
             <nav>
                 <div class="navLeft">
-                    <a href="DigitalPortfolio/index.html">Yash Djson Dookun</a>
+                    <a href="./index.html">Yash Djson Dookun</a>
                 </div>
                 <div class="navRight">
                     <div>
-                        <a href="/index.html">Home</a>
+                        <a href="./index.html">Home</a>
                     </div>
                     <div>
                         <div class="projects" onclick="toggleDropDown()">Projects</div>
