--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <header class="header">
             <nav>
                 <div class="navLeft">
-                    <a href="/">Yash Djson Dookun</a>
+                    <a href="./index.html">Yash Djson Dookun</a>
                 </div>
                 <div class="navRight">
                     <div>
-                        <a href="/">Home</a>
+                        <a href="./index.html">Home</a>
                     </div>
                     <div>
                         <div class="projects" onclick="toggleDropDown()">Projects</div>
