--- a/animations.html
+++ b/animations.html
@@ -63,16 +63,17 @@
                     <div class="contentOne">
                         <p class="intro">
                             It's been a few weeks since we've gotten into the 1st Semester of this 2nd Year.
+                            <br>
                             <br> The main module that requested this digital portfolio - <strong>LLC 2050Y - 2D Animation Tools and Techniques</strong> - promised to englobe a series of practicals w.r.t to Animation (tools/techniques). For one of the
-                            first assignments, we were given a series of turorials and practicals to go through and complete on Gifs.
+                            first assignments, we were given a series of turorials and practicals on Gifs to go through and complete.
                             <br> Now, Gifs are used almost by everyone in this modern era of social media and instant messaging revolution... But! How exactly are Gifs created?
                             <br> I've always known that if Gifs are like "small videos", they should obviously be created in Video Editing Softwares such as Adobe Premiere Pro, KdenLive, etc... Hell, I've personally seen smartphones instantly turn video
-                            clips/recordings into gifs at the click of a button... HOWEVER, you might be just as surprised as I was to know that Gifs can be created from Scratch from one of, if not the, most popular Photo Editing/Manipulation software
+                            clips/recordings into gifs at the click of a button... HOWEVER, you might be just as surprised as I was to know that Gifs can be created from Scratch using one of, if not the, most popular Photo Editing/Manipulation software
                             on the market.
                             <br>
                             <br>Yes! I'm talking of :
                         </p>
-                        <div class="contentTwo">
+                        <div class="contentOneptTwo">
                             <h1 class="photoShopAnimation">
                                 <span class="word">ADOBE</span>
                                 <span class="word">PHOTOSHOP</span>
@@ -88,6 +89,14 @@
                                 </i>
                             <br>
                         </p>
+                    </div>
+                    <div class="contentTwo">
+                        <p>Gifs can be using either of 2 ways using Photoshop:</p>
+                        <ol>
+                            <li>Using a video timeline</li>
+                            <li>Frame by Frame Animations</li>
+                        </ol>
+                        <img id="photoshop2ways" src="./assets/images/Animations/2waysToDoAnimationsInPhotoshop.png" alt="">
                     </div>
                 </article>
             </section>
