--- a/animations.html
+++ b/animations.html
@@ -91,12 +91,22 @@
                         </p>
                     </div>
                     <div class="contentTwo">
-                        <p>Gifs can be using either of 2 ways using Photoshop:</p>
+                        <p>Gifs can be created using either of 2 ways with Photoshop:</p>
                         <ol>
-                            <li>Using a video timeline</li>
                             <li>Frame by Frame Animations</li>
+                            <li>Using a video timeline</li>
                         </ol>
                         <img id="photoshop2ways" src="./assets/images/Animations/2waysToDoAnimationsInPhotoshop.png" alt="">
+                    </div>
+                    <div class="contentThree">
+                        <div class="fbf_animation">
+                            <img src="./assets/images/Animations/animations2.gif" alt="">
+                            <p> 1. Frame by Frame Animation</p>
+                        </div>
+                        <div class="timeline">
+                            <img src="./assets/images/Animations/animations3.gif" alt="">
+                            <p>2. Using a Video Timeline</p>
+                        </div>
                     </div>
                 </article>
             </section>
