--- a/animations.html
+++ b/animations.html
@@ -109,6 +109,46 @@
                         </div>
                     </div>
                 </article>
+                <article class="VisualStorytelling_StoryBoarding">
+                    <h3>Visual Storytelling & StoryBoarding</h3>
+                    <div class="separator-line "></div>
+                    <img id="photoshop2ways" src="./assets/images/StoryBoard/Storyboard1.png" alt="">
+                    <div class="contentOne">
+                        <p class="intro">
+                            <b style="font-size: 28px; text-decoration: underline;">What is a storyboard?</b>
+                            <br>
+                            <p>
+                                According to <a href="https://graphicdesign.sfcc.spokane.edu/dZine/projects/exercises/multimedia/files/storyboarding.pdf" style="text-decoration: underline;"><i>this source</i></a>, a storyboard is a number of drawings,
+                                supported with directional notes, that form a visual script for an animation.
+                            </p>
+                            <p>A storyboard visually tells the story of an animation panel by panel, kind of like a comic book.</p>
+                            <br>
+                            <br>
+                            <p>Now, there are many reasons why storyboarding is important: </p>
+                            <ul>
+                                <li>It is during the storyboarding phase that most of the errors related to narration, media, and other relevant details are identified.</li>
+                                <li>It is while creating the storyboard that you can test if certain punch lines or dialogues would work as you have imagined before.</li>
+                                <li>Storyboards contain notes to developers like what media to be used, what elements get synched with which part of the audio narration, which elements would be clickable, and the resultant reaction. This gives a comprehensive
+                                    idea of how the course would flow in its entirety. So, the storyboard serves as the blueprint for the module and guides not just the developer, but also the quality controller on how the visualizer has envisioned the
+                                    module screen by screen.</li>
+                            </ul>
+                            <br>
+                            <p>In short, A storyboard reveals whether a concept will work or not.</p>
+                            <p>But... Here's the thing - I hate drawing!</p>
+                            <br>
+                            <p>Luckily, the internet is full of resources and templates available for use with little modifications required. <br> One other great advantage of being in the modern era is that there are tools readily available to ease the
+                                process of drawing thanks to Digital Art. Using tools like Adobe Photoshop or Adobe Illustrator vastly decreases the hassle of creating step by step drawings to visually convey messages/stories and hence storyboarding.</p>
+                            <br>
+                            <p>When I first came across the term "Storyboard", I always thought that only pictures would be involve - WRONG! <br> On a professional scale, actual words have to be used and mind you that specific jargons are to be used too!!</p>
+                            <img style="margin-top: 3vh;" src="./assets/images/Storyboard/storyboard2.png" alt="">
+                            <br>
+                            <p>Specific camera movements and location have to be specified - Dialogues are to be inserted - the more details added, the better!!</p>
+                            <br>
+                            <p>Anyhow, through this course, I got a new perspective on the world of animations, storytelling, VISUAL-Storytelling and so much more; although I still do not enjoy creating animations and definitely not going through the hassle
+                                of Storyboarding despite all the tools.</p>
+                        </p>
+                    </div>
+                </article>
             </section>
         </section>
         <footer>
