Added AdobeAnimate Page

--- a/index.html
+++ b/index.html
@@ -1,159 +1,156 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>Yash Djson Dookun</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <script src="./assets/js/script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-</head>
-
-<body>
-    <section class="main">
-        <header class="header">
-            <nav>
-                <div class="navLeft">
-                    <a href="./index.html">Yash Djson Dookun</a>
-                </div>
-                <div class="navRight">
-                    <div>
-                        <a href="./index.html">Home</a>
-                    </div>
-                    <div>
-                        <div class="projects" onclick="toggleDropDown()">Projects</div>
-                        <div id="dropdown" class="dropdown-content">
-                            <a href="./animations.html">Animations</a>
-
-                        </div>
-                    </div>
-                    <div>
-                        <a href="#">Contact Me</a>
-                    </div>
-                    <div class="burger">
-                        <img src=" ./assets/images/navbar/menu_24px.png " alt=" ">
-                    </div>
-                </div>
-            </nav>
-        </header>
-        <article class="article-one ">
-            <section class="section-Top ">
-                <div class="titleText ">
-                    <h1>Djson's Digital Portfolio</h1>
-                </div>
-                <div class="separator-line "></div>
-                <div class="welcome ">
-                    <div class="welcomeMsg ">
-                        <h2>Hey y'all, Welcome to my Digital Portfolio! Do come along and let's enjoy my journey throughout my second year at the University of Mauritius together!</h2>
-                    </div>
-                    <div class="followAlong ">
-                        <button class="followAlong-btn ">Follow Along</button>
-                    </div>
-                </div>
-            </section>
-            <section class="section-One ">
-                <div class="aboutMe ">
-                    <div class="whoAmI ">
-                        <div class="myImage ">
-                            <img src="./assets/images/userFace/check_male_50px.png " alt=" ">
-                        </div>
-                        <div class="myDescription ">
-                            <br>
-                            <p>
-                                Hello folks, my name is Yash Djson Dookun.
-                                <br>
-                                <br> I am a Tech hobbyist and a 2nd Year Web & Multimedia Development student at the University of Mauritius. I enjoy programming a lot and spend most of my time behind a PC screen! In the past months or so, I've also been
-                                trying a lot of computer operating systems (most specifically Linux distros).
-                            </p>
-                            <br>
-                            <p>
-                                I enjoy finding ways in which people are digitally vulnerable and hopefully be able to help in finding adequate solutions. I created this site to share my interests, as they evolve, and connect with you all (and also because it was a requirement for one
-                                of my course modules).
-                            </p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="aboutMyCourse ">
-                    <div class="description1 ">
-                        <h2>
-                            BSC(Hons.) Web & Multimedia Development
-                            <hr>
-                        </h2>
-                        <p>
-                            This course offers web and multimedia development skills, which are focused on internet technologies such as the design and implementation of web-based client/server systems.
-                        </p>
-                        <br>
-                        <p>The course is designed to ensure that students possess a broad range of computing knowledge and skills, and it includes core modules in general software design and development, as well as in scripting technologies specific for
-                            web development.
-                            <br> The Programme is aimed at those who wish to pursue a broader career related to the design, development and implementation of Internet-based Information Systems. It covers a range of techniques that will be invaluable to
-                            those intending to follow a technical, managerial or organizational role within the field of Information Systems.
-                        </p>
-                    </div>
-                    <div class="description2 ">
-                        <h2>
-                            Since I am currently a 2nd Year Student, my main modules for this year are:
-                        </h2>
-                        <ul>
-                            <li>
-                                LLC2300Y - Visual Programming Techniques (6 credits)
-                            </li>
-                            <li>
-                                LLC2050Y - 2D Animation Tools and Techniques(6 credits)
-                            </li>
-                            <li>
-                                LLC 2070 - Mobile Applications (3 credits)
-                            </li>
-                            <li>
-                                LLC 2020Y - Web Applications & Technologies (6 credits)
-                            </li>
-                            <li>
-                                LLC 2030Y - Interactive Systems and 3D Development (6 credits)
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-        </article>
-    </section>
-    <footer>
-        <section class="contactMe ">
-            <ul>
-                <li>
-                    <a href="# "><img src="./assets/images/Footer/twitter_127px.png " alt=" "></a>
-                </li>
-                <li>
-                    <a href="# "><img src="./assets/images/Footer/facebook_127px.png " alt=" "></a>
-                </li>
-                <li>
-                    <a href="# "><img src="./assets/images/Footer/instagram_127px.png " alt=" "></a>
-                </li>
-                <li>
-                    <a href="# "><img src="./assets/images/Footer/email_127px.png " alt=" "></a>
-                </li>
-                <li>
-                    <a href="# "><img src="./assets/images/Footer/github_127px.png " alt=" "></a>
-                </li>
-                <li>
-                    <a href="# "><img src="./assets/images/Footer/skype_127px.png " alt=" "></a>
-                </li>
-            </ul>
-        </section>
-        <div class="txt ">
-            <p>©All Rights Reserved</p>
-            <p>|</p>
-            <p>Designed & Developed By: Yash Djson Dookun</p>
-            <p>|</p>
-            <p>2019</p>
-        </div>
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js "></script>
+	<head>
+		<title>Yash Djson Dookun</title>
+		<link rel="stylesheet" href="./assets/css/style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<script src="./assets/js/script.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+	</head>
+	<body>
+		<section class="main">
+			<header class="header">
+				<nav>
+					<div class="navLeft">
+						<a href="./index.html">Yash Djson Dookun</a>
+					</div>
+					<div class="navRight">
+						<div>
+							<a href="./index.html">Home</a>
+						</div>
+						<div>
+							<div class="projects" onclick="toggleDropDown()">Projects</div>
+							<div id="dropdown" class="dropdown-content">
+								<a href="./animations.html">Animations</a>
+								<a href="./adobeAnimate.html">Adobe Animate</a>
+							</div>
+						</div>
+						<div>
+							<a href="#">Contact Me</a>
+						</div>
+						<div class="burger">
+							<img src=" ./assets/images/navbar/menu_24px.png " alt=" ">
+						</div>
+					</div>
+				</nav>
+			</header>
+			<article class="article-one ">
+				<section class="section-Top ">
+					<div class="titleText ">
+						<h1>Djson's Digital Portfolio</h1>
+					</div>
+					<div class="separator-line "></div>
+					<div class="welcome ">
+						<div class="welcomeMsg ">
+							<h2>Hey y'all, Welcome to my Digital Portfolio! Do come along and let's enjoy my journey throughout my second year at the University of Mauritius together!</h2>
+						</div>
+						<div class="followAlong ">
+							<button class="followAlong-btn ">Follow Along</button>
+						</div>
+					</div>
+				</section>
+				<section class="section-One ">
+					<div class="aboutMe ">
+						<div class="whoAmI ">
+							<div class="myImage ">
+								<img src="./assets/images/userFace/check_male_50px.png " alt=" ">
+							</div>
+							<div class="myDescription ">
+								<br>
+								<p>
+									Hello folks, my name is Yash Djson Dookun.
+									<br>
+									<br> I am a Tech hobbyist and a 2nd Year Web & Multimedia Development student at the University of Mauritius. I enjoy programming a lot and spend most of my time behind a PC screen! In the past months or so, I've also been
+									trying a lot of computer operating systems (most specifically Linux distros).
+								</p>
+								<br>
+								<p>
+									I enjoy finding ways in which people are digitally vulnerable and hopefully be able to help in finding adequate solutions. I created this site to share my interests, as they evolve, and connect with you all (and also because it was a requirement for one
+									of my course modules).
+								</p>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="aboutMyCourse ">
+					<div class="description1 ">
+						<h2>
+						BSC(Hons.) Web & Multimedia Development
+						<hr>
+						</h2>
+						<p>
+							This course offers web and multimedia development skills, which are focused on internet technologies such as the design and implementation of web-based client/server systems.
+						</p>
+						<br>
+						<p>The course is designed to ensure that students possess a broad range of computing knowledge and skills, and it includes core modules in general software design and development, as well as in scripting technologies specific for
+							web development.
+							<br> The Programme is aimed at those who wish to pursue a broader career related to the design, development and implementation of Internet-based Information Systems. It covers a range of techniques that will be invaluable to
+							those intending to follow a technical, managerial or organizational role within the field of Information Systems.
+						</p>
+					</div>
+					<div class="description2 ">
+						<h2>
+						Since I am currently a 2nd Year Student, my main modules for this year are:
+						</h2>
+						<ul>
+							<li>
+								LLC2300Y - Visual Programming Techniques (6 credits)
+							</li>
+							<li>
+								LLC2050Y - 2D Animation Tools and Techniques(6 credits)
+							</li>
+							<li>
+								LLC 2070 - Mobile Applications (3 credits)
+							</li>
+							<li>
+								LLC 2020Y - Web Applications & Technologies (6 credits)
+							</li>
+							<li>
+								LLC 2030Y - Interactive Systems and 3D Development (6 credits)
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</article>
+	</section>
+	<footer>
+		<section class="contactMe ">
+			<ul>
+				<li>
+					<a href="# "><img src="./assets/images/Footer/twitter_127px.png " alt=" "></a>
+				</li>
+				<li>
+					<a href="# "><img src="./assets/images/Footer/facebook_127px.png " alt=" "></a>
+				</li>
+				<li>
+					<a href="# "><img src="./assets/images/Footer/instagram_127px.png " alt=" "></a>
+				</li>
+				<li>
+					<a href="# "><img src="./assets/images/Footer/email_127px.png " alt=" "></a>
+				</li>
+				<li>
+					<a href="# "><img src="./assets/images/Footer/github_127px.png " alt=" "></a>
+				</li>
+				<li>
+					<a href="# "><img src="./assets/images/Footer/skype_127px.png " alt=" "></a>
+				</li>
+			</ul>
+		</section>
+		<div class="txt ">
+			<p>©All Rights Reserved</p>
+			<p>|</p>
+			<p>Designed & Developed By: Yash Djson Dookun</p>
+			<p>|</p>
+			<p>2019</p>
+		</div>
+	</footer>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js "></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js "></script>
 </body>
-
 </html
