--- a/animations.html
+++ b/animations.html
@@ -29,6 +29,7 @@
                         <div class="projects" onclick="toggleDropDown()">Projects</div>
                         <div id="dropdown" class="dropdown-content">
                             <a href="./animations.html">Animations</a>
+                            <a href="./adobeAnimate.html">Adobe Animate</a>
                         </div>
                     </div>
                     <div>
